k8s/deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: inat-pod
  labels:
    k8s-app: cbn-app
spec:
  containers:
  - name: shiny
    image: ghcr.io/boettiger-lab/CBN-taskforce
    imagePullPolicy: Always
    resources:
      requests:
        cpu: 2
        memory: 4Gi
      limits:
        cpu: 2
        memory: 4Gi
