k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cbn-ingress
  annotations:
    haproxy.org/timeout-server: "300s"
    haproxy.org/timeout-client: "300s"
    haproxy.org/timeout-connect: "300s"
    haproxy.org/timeout-http-request: "300s"
spec:
  ingressClassName: haproxy
  rules:
  - host: cbn-biodiversity.nrp-nautilus.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cbn-svc
            port:
              number: 8080
  tls:
  - hosts:
    - cbn-biodiversity.nrp-nautilus.io
